@@ -49,7 +49,7 @@
                 <!-- Thunderbird -->
                 <em:id>{3550f703-e582-4d05-9a08-453d09bdfdc6}</em:id>
                 <em:minVersion>2.0</em:minVersion>
-                <em:maxVersion>2.0.0.*</em:maxVersion>
+                <em:maxVersion>3.0.*</em:maxVersion>
                 <em:updateLink>__XPI_URL__</em:updateLink>
                 <em:updateHash>__UPDATE_HASH__</em:updateHash>
               </rdf:Description>
